--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,37 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.10'
+	id 'org.springframework.boot' version '3.4.1'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.reinput'
+group = 'info.reinput'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
 }
 
 repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+ext {
+	set('springCloudVersion', "2024.0.0")
 }
 
-ext {
-	set('springCloudVersion', "2023.0.3")
-	name = 'reinput-discovery-server'
-    description = 'Reinput Discovery Server' 
-    version='0.0.1-SNAPSHOT'
-    sourceEncoding='UTF-8'
+dependencies {
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+}
+
+tasks.named('test') {
+	useJUnitPlatform()
 }
