--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ steps.project.outputs.name }}:latest
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ steps.project.outputs.name }}:${{ github.sha }}
+            ghcr.io/reinput/${{ steps.project.outputs.name }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max 
