--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,3 +9,6 @@ jobs:
     uses: Re-Input/reinput-shared-workflows/.github/workflows/reusable-ci.yml@main
     with:
       image-name: reinput/discovery-server
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
