--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,5 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
   instance:
-    hostname: localhost 
+    prefer-ip-address: true
     
